--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiogram==3.4.1
-fastapi
-uvicorn
-sqlalchemy
-aiosqlite
-apscheduler
-python-dotenv
+fastapi==0.110.0
+uvicorn==0.27.1
+sqlalchemy==2.0.27
+aiosqlite==0.19.0
+apscheduler==3.10.4
+python-dotenv==1.0.1
