--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-aiogram==3.4.1
-fastapi==0.110.0
-uvicorn==0.27.1
-sqlalchemy==2.0.27
-aiosqlite==0.19.0
-apscheduler==3.10.4
+python-telegram-bot==20.7
 python-dotenv==1.0.1
+requests==2.31.0
