--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,6 @@
 services:
   - type: web
-    name: telegram-subscription-bot
-    runtime: python
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.9
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
+    name: tg-sub-bot
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app.api:app --host 0.0.0.0 --port $PORT
